--- a/styles/pastWinnersModal.css
+++ b/styles/pastWinnersModal.css
@@ -109,6 +109,12 @@
   padding: 1rem 3rem;
   border-radius: 0.5rem;
   cursor: pointer;
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+}
+
+.btn__pagination:hover {
+  background: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient background */
+  color: #ffffff; /* Text color on hover */
 }
 
 .btn__pagination:disabled {
