--- a/styles/header.css
+++ b/styles/header.css
@@ -9,35 +9,51 @@
   border-bottom: 2px solid rgba(255, 255, 255, 0.8);
   z-index: 2;
 }
+
 .header__area .container {
   height: 100%;
 }
+
 .header-logo {
   width: 9rem;
   height: auto;
 }
+
 .header {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .header__left {
   display: flex;
   align-items: center;
   gap: 6rem;
 }
+
 .mainmenu {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 5rem;
 }
+
 .mainmenu li a {
   color: #fff;
   font-size: 1.6rem;
   font-weight: bold;
+  transition: background 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
+
+.mainmenu li a:hover {
+  background: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient background */
+  color: #ffffff; /* Text color on hover */
+  padding: 0.5rem 1rem; /* Optional padding for hover effect */
+  border-radius: 5px; /* Optional border radius for hover effect */
+  transform: translateY(-3px); /* Slight lift on hover */
+}
+
 .btn {
   font-size: 1.4rem;
   font-weight: bold;
@@ -47,7 +63,9 @@
   display: inline-block;
   padding: 0.8rem 4rem;
   border-radius: 0.9rem;
+  transition: background 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
+
 .btn__primary {
   background: linear-gradient(
     90deg,
@@ -57,12 +75,18 @@
   text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
+.btn__primary:hover {
+  color: linear-gradient(45deg, #fe4d01, #f4a77b); /* Text Color */
+  transform: translateY(-3px); /* Slight lift on hover */
+}
+
 .menubar {
   font-size: 2.5rem;
   color: #fff;
   cursor: pointer;
   display: none;
 }
+
 .mobile__menu {
   position: absolute;
   top: 0;
@@ -73,6 +97,7 @@
   background-color: var(--color-dark-secondary);
   /* display: none; */
 }
+
 .mobile__menu .mobilemenu__list {
   display: flex;
   flex-direction: column;
@@ -85,7 +110,17 @@
 .mobile__menu .mobilemenu__list a {
   color: #fff;
   font-size: 2rem;
+  transition: background 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
+
+.mobile__menu .mobilemenu__list a:hover {
+  background: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient background */
+  color: #ffffff; /* Text color on hover */
+  padding: 0.5rem 1rem; /* Optional padding for hover effect */
+  border-radius: 5px; /* Optional border radius for hover effect */
+  transform: translateY(-3px); /* Slight lift on hover */
+}
+
 .close {
   position: absolute;
   top: 4rem;
