--- a/styles/header.css
+++ b/styles/header.css
@@ -43,7 +43,7 @@
   color: #fff;
   font-size: 1.6rem;
   font-weight: bold;
-  transition: color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
+  transition: background-color 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
 
 .mainmenu li a:hover {
@@ -62,7 +62,7 @@
   display: inline-block;
   padding: 0.8rem 4rem;
   border-radius: 0.9rem;
-  transition: color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
+  transition: background-color 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
 
 .btn__primary {
@@ -80,9 +80,7 @@
     var(--color-dark-tertiary) 0%,
     var(--color-dark-secondary) 100%
   ); /* Keep the background color the same on hover */
-  color: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient text color */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #fe4d01; /* Change text color to a solid color that matches the gradient */
   transform: translateY(-3px); /* Slight lift on hover */
 }
 
@@ -116,7 +114,7 @@
 .mobile__menu .mobilemenu__list a {
   color: #fff;
   font-size: 2rem;
-  transition: color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
+  transition: background-color 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
 
 .mobile__menu .mobilemenu__list a:hover {
@@ -133,23 +131,4 @@
   font-size: 3rem;
   color: #fff;
   cursor: pointer;
-}
-
-/* CSS for Bonuses and Leaderboard buttons */
-.btn-secondary {
-  font-size: 1.4rem;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #fff;
-  background-color: var(--color-secondary); /* Assuming you have a secondary color defined */
-  padding: 0.8rem 4rem;
-  border-radius: 0.9rem;
-  transition: color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
-}
-
-.btn-secondary:hover {
-  color: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient text color */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  transform: translateY(-3px); /* Slight lift on hover */
 }
