--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,27 +1,3 @@
-.hero__area {
-  position: relative;
-  z-index: 1;
-}
-
-.hero__area .container {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 100%;
-  height: 100%;
-}
-
-.hero__content {
-  margin-top: 60rem; /* Adjusted to move the buttons down */
-  text-align: center; /* Center the content */
-}
-
-.hero__img {
-  width: 100vw;
-  height: auto;
-}
-
 .hero__btn {
   display: flex;
   align-items: center;
@@ -29,70 +5,19 @@
   gap: 3rem;
 }
 
-.hero__btn a {
-  padding: 1rem 3rem; /* Increased padding for bigger buttons */
-  font-size: 1.5rem; /* Increased font size for bigger buttons */
-  background-color: #0056b3; /* Initial background color */
-  color: #fff; /* Initial text color */
-  border: 2px solid #1973c9; /* Initial border color */
-  border-radius: 5px; /* Button border radius */
+.btn-secondary {
+  font-size: 1.4rem;
+  font-weight: bold;
   text-transform: uppercase;
-  text-decoration: none;
-  transition: background 0.3s, color 0.3s; /* Smooth transition for hover effect */
-}
-
-.hero__btn a:hover {
-  background: linear-gradient(45deg, #0056b3, #002344); /* Gradient background on hover */
-  color: #ffeb3b; /* Text color on hover */
-}
-
-.hero__play--btn {
-  margin-top: 4rem;
-  display: flex;
-  justify-content: center;
-}
-
-.hero__play--btn--inner {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 6rem;
-  height: 6rem;
-  background-color: var(--color-dark-tertiary);
-  border: 2px solid #fff;
-  border-radius: 1rem;
-  cursor: pointer;
-}
-
-.hero__play--btn .play {
   color: #fff;
-  font-size: 2rem;
-  rotate: 90deg;
+  background-color: var(--color-secondary); /* Assuming you have a secondary color defined */
+  padding: 0.8rem 4rem;
+  border-radius: 0.9rem;
+  transition: background-color 0.3s, color 0.3s, transform 0.3s; /* Smooth transition for hover effect */
 }
 
-/* responsive */
-@media screen and (max-width: 1480px) {
-  .hero__content {
-    margin-top: 55rem; /* Adjusted to move the buttons down for smaller screens */
-  }
-}
-@media screen and (max-width: 1300px) {
-  .hero__content {
-    margin-top: 50rem; /* Adjusted to move the buttons down for smaller screens */
-  }
-}
-@media screen and (max-width: 1140px) {
-  .hero__content {
-    margin-top: 45rem; /* Adjusted to move the buttons down for smaller screens */
-  }
-}
-@media screen and (max-width: 1000px) {
-  .hero__content {
-    margin-top: 40rem; /* Adjusted to move the buttons down for smaller screens */
-  }
-}
-@media screen and (max-width: 700px) {
-  .hero__content {
-    margin-top: 35rem; /* Adjusted to move the buttons down for smaller screens */
-  }
+.btn-secondary:hover {
+  background-color: var(--color-secondary); /* Keep background color */
+  color: #fe4d01; /* Change text color to a solid color */
+  transform: translateY(-3px); /* Slight lift on hover */
 }
