--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,10 +1,52 @@
+.hero__area {
+  position: relative;
+  z-index: 1;
+}
+.hero__area .container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100%;
+  height: 100%;
+}
+.hero__content {
+  margin-top: 45rem; /* Adjust this value to move the buttons down */
+}
+.hero__img {
+  width: 100vw;
+  height: auto;
+}
 .hero__btn {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 3rem;
+  margin-top: 4rem; /* Adjust this value to position the buttons correctly */
+}
+.hero__play--btn {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+}
+.hero__play--btn--inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 6rem;
+  height: 6rem;
+  background-color: var(--color-dark-tertiary);
+  border: 2px solid #fff;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+.hero__play--btn .play {
+  color: #fff;
+  font-size: 2rem;
+  rotate: 90deg;
 }
 
+/* Styles for Buttons */
 .btn-secondary {
   font-size: 1.4rem;
   font-weight: bold;
@@ -20,4 +62,31 @@
   background-color: var(--color-secondary); /* Keep background color */
   color: #fe4d01; /* Change text color to a solid color */
   transform: translateY(-3px); /* Slight lift on hover */
+}
+
+/* responsive */
+@media screen and (max-width: 1480px) {
+  .hero__content {
+    margin-top: 42rem;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .hero__content {
+    margin-top: 36rem;
+  }
+}
+@media screen and (max-width: 1140px) {
+  .hero__content {
+    margin-top: 32rem;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .hero__content {
+    margin-top: 25rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  .hero__content {
+    margin-top: 18rem;
+  }
 }
