--- a/styles/hero.css
+++ b/styles/hero.css
@@ -2,6 +2,7 @@
   position: relative;
   z-index: 1;
 }
+
 .hero__area .container {
   position: absolute;
   top: 0;
@@ -10,13 +11,16 @@
   width: 100%;
   height: 100%;
 }
+
 .hero__content {
-  margin-top: 45rem; /* Adjust this value to move the buttons down */
+  margin-top: 60rem; /* Adjust this value to move the buttons down into the red box area */
 }
+
 .hero__img {
   width: 100vw;
   height: auto;
 }
+
 .hero__btn {
   display: flex;
   align-items: center;
@@ -24,11 +28,13 @@
   gap: 3rem;
   margin-top: 4rem; /* Adjust this value to position the buttons correctly */
 }
+
 .hero__play--btn {
   margin-top: 4rem;
   display: flex;
   justify-content: center;
 }
+
 .hero__play--btn--inner {
   display: flex;
   align-items: center;
@@ -40,6 +46,7 @@
   border-radius: 1rem;
   cursor: pointer;
 }
+
 .hero__play--btn .play {
   color: #fff;
   font-size: 2rem;
@@ -67,26 +74,30 @@
 /* responsive */
 @media screen and (max-width: 1480px) {
   .hero__content {
-    margin-top: 42rem;
+    margin-top: 55rem;
   }
 }
+
 @media screen and (max-width: 1300px) {
   .hero__content {
-    margin-top: 36rem;
+    margin-top: 50rem;
   }
 }
+
 @media screen and (max-width: 1140px) {
   .hero__content {
-    margin-top: 32rem;
+    margin-top: 45rem;
   }
 }
+
 @media screen and (max-width: 1000px) {
   .hero__content {
-    margin-top: 25rem;
+    margin-top: 40rem;
   }
 }
+
 @media screen and (max-width: 700px) {
   .hero__content {
-    margin-top: 18rem;
+    margin-top: 35rem;
   }
 }
