--- a/styles/card.css
+++ b/styles/card.css
@@ -60,14 +60,24 @@
   text-align: center;
   display: inline-block;
   margin-top: 4rem;
+  width: 100%;
+  height: 15rem; /* Fixed height for consistency */
 }
 
 .card .title img.title__img {
-  max-width: 50%; /* Make images 50% smaller */
+  max-width: 50%;
   height: auto;
   display: block;
   margin: 0 auto;
   animation: float 3s ease-in-out infinite; /* Apply the float animation */
+}
+
+.card .title img.csgo-roll {
+  max-width: 35%; /* Adjusted size */
+}
+
+.card .title img.packdraw {
+  max-width: 50%; /* Adjusted size */
 }
 
 .card .rewards {
@@ -107,6 +117,8 @@
   background-size: contain;
   background-position: center;
   margin-bottom: 13rem;
+  width: 100%;
+  height: 6rem; /* Fixed height for consistency */
 }
 
 .btn__card {
@@ -122,7 +134,7 @@
 }
 
 .btn__card:hover {
-  color: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient text color on hover */
+  color: #fe4d01; /* Change to solid color for hover */
 }
 
 /* Responsive  */
