--- a/styles/style.css
+++ b/styles/style.css
@@ -75,3 +75,19 @@ ul {
     gap: 2rem;
   }
 }
+.past__winner--btn {
+  background-color: #0056b3; /* Original button background color */
+  color: #fff;
+  font-size: 1.6rem;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  transition: background 0.3s, color 0.3s; /* Smooth transition for hover effect */
+}
+
+.past__winner--btn:hover {
+  background: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient background on hover */
+  color: #ffffff; /* Text color on hover */
+}
+
