--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,7 @@
   height: 10rem;
   backdrop-filter: blur(5px);
   border-bottom: 2px solid rgba(255, 255, 255, 0.8);
-  z-index: 2;
+  z-index: 999;
 }
 
 .header__area .container {
@@ -47,7 +47,11 @@
 }
 
 .mainmenu li a:hover {
-  background: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient background */
+  background: linear-gradient(
+    45deg,
+    #fe4d01,
+    #f4a77b
+  ); /* Gradient background */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transform: translateY(-3px); /* Slight lift on hover */
@@ -118,7 +122,11 @@
 }
 
 .mobile__menu .mobilemenu__list a:hover {
-  background: linear-gradient(45deg, #fe4d01, #f4a77b); /* Gradient background */
+  background: linear-gradient(
+    45deg,
+    #fe4d01,
+    #f4a77b
+  ); /* Gradient background */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transform: translateY(-3px); /* Slight lift on hover */
